Create compmany model
